# EvolvAi

./: .abacus.donotdelete  .dockerignore  .env.example  .gitignore  ANALYSIS.md  DASHBOARD.md  INTEGRATION.md  Makefile  QA_SYSTEM.md  README.md  docker-compose.yml  pyproject.toml
agent_pods.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: deploy.abacus.yaml  routing.yaml  system.yaml
core_runtime/: __init__.py  contracts.py  eval_runner.py  execute.py  state.py
data/: NORMALIZATION_COMPARISON.md  REAL_QA_REPORT.md  normalization_comparison.json  real_qa_results.json
deployment/: Dockerfile  abacus_workflow_entry.py
docker/: Dockerfile  docker-compose.yml
evals/: README.md
golden/: snapshots.json
personas/: clarifier.yaml  code_review.yaml  general.yaml  regression.yaml
scripts/: dev_run.sh  generate_pods.py  replay_run.py  run_eval_pack.py  run_normalization_comparison.py  run_qa_demo.py  run_real_qa_tests.py  run_regression.py  seed_pods.py
tests/: test_action_approval_db.py  test_artifact_store_and_db_helpers.py  test_attractor_query.py  test_attractor_repair_rate.py  test_dream_grid.py  test_e2e_hello_and_replay.py  test_eval_runner.py  test_execute_request.py  test_executor_content_sanitize.py  test_fingerprints_stable.py  test_hashing_and_fingerprints.py  test_intent_ask_me_something.py  test_judge_grounding.py  test_judge_instruction_quality.py  test_lineage_tracking.py  test_market_allocator.py  test_model_provider_alias.py  test_multi_pod_broadcast.py  test_mutation_creates_new_dna_and_lineage.py  test_pod_generator.py  (+23 more)
(+90 files in other folders)
