[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-pods"
version = "0.1.0"
description = "Pod-based agent runtime prototype"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "core*", "core_runtime*"]
exclude = ["tests*", "data*", "docker*", "golden*", "config*", "configs*", "personas*"]
